// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingBlockEnd renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: 0;
  -moz-scroll-padding-block-end: 0;
  -ms-scroll-padding-block-end: 0;
  scroll-padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 0;
  -moz-scroll-padding-block-end: 0;
  -ms-scroll-padding-block-end: 0;
  scroll-padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 0;
  -moz-scroll-padding-block-end: 0;
  -ms-scroll-padding-block-end: 0;
  scroll-padding-block-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 0;
  -moz-scroll-padding-block-end: 0;
  -ms-scroll-padding-block-end: 0;
  scroll-padding-block-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: hasnot;
  -moz-scroll-padding-block-end: hasnot;
  -ms-scroll-padding-block-end: hasnot;
  scroll-padding-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: has;
  -moz-scroll-padding-block-end: has;
  -ms-scroll-padding-block-end: has;
  scroll-padding-block-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: hasnot;
  -moz-scroll-padding-block-end: hasnot;
  -ms-scroll-padding-block-end: hasnot;
  scroll-padding-block-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: has;
  -moz-scroll-padding-block-end: has;
  -ms-scroll-padding-block-end: has;
  scroll-padding-block-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: invalid.path.1;
  -moz-scroll-padding-block-end: invalid.path.1;
  -ms-scroll-padding-block-end: invalid.path.1;
  scroll-padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: invalid.path.1;
  -moz-scroll-padding-block-end: invalid.path.1;
  -ms-scroll-padding-block-end: invalid.path.1;
  scroll-padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: invalid.path.1;
  -moz-scroll-padding-block-end: invalid.path.1;
  -ms-scroll-padding-block-end: invalid.path.1;
  scroll-padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: invalid.path.1;
  -moz-scroll-padding-block-end: invalid.path.1;
  -ms-scroll-padding-block-end: invalid.path.1;
  scroll-padding-block-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: -54881px;
  -moz-scroll-padding-block-end: -54881px;
  -ms-scroll-padding-block-end: -54881px;
  scroll-padding-block-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: -54881px;
  -moz-scroll-padding-block-end: -54881px;
  -ms-scroll-padding-block-end: -54881px;
  scroll-padding-block-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: -42365px;
  -moz-scroll-padding-block-end: -42365px;
  -ms-scroll-padding-block-end: -42365px;
  scroll-padding-block-end: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: -42365px;
  -moz-scroll-padding-block-end: -42365px;
  -ms-scroll-padding-block-end: -42365px;
  scroll-padding-block-end: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: July;
    -moz-scroll-padding-block-end: July;
    -ms-scroll-padding-block-end: July;
    scroll-padding-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: September;
    -moz-scroll-padding-block-end: September;
    -ms-scroll-padding-block-end: September;
    scroll-padding-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: July;
    -moz-scroll-padding-block-end: July;
    -ms-scroll-padding-block-end: July;
    scroll-padding-block-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: September;
    -moz-scroll-padding-block-end: September;
    -ms-scroll-padding-block-end: September;
    scroll-padding-block-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: May;
    -moz-scroll-padding-block-end: May;
    -ms-scroll-padding-block-end: May;
    scroll-padding-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: June;
    -moz-scroll-padding-block-end: June;
    -ms-scroll-padding-block-end: June;
    scroll-padding-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: April;
    -moz-scroll-padding-block-end: April;
    -ms-scroll-padding-block-end: April;
    scroll-padding-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: May;
    -moz-scroll-padding-block-end: May;
    -ms-scroll-padding-block-end: May;
    scroll-padding-block-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: June;
    -moz-scroll-padding-block-end: June;
    -ms-scroll-padding-block-end: June;
    scroll-padding-block-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-block-end: April;
    -moz-scroll-padding-block-end: April;
    -ms-scroll-padding-block-end: April;
    scroll-padding-block-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-block-end: July;
    -moz-scroll-padding-block-end: July;
    -ms-scroll-padding-block-end: July;
    scroll-padding-block-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-end: September;
    -moz-scroll-padding-block-end: September;
    -ms-scroll-padding-block-end: September;
    scroll-padding-block-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-block-end: July;
    -moz-scroll-padding-block-end: July;
    -ms-scroll-padding-block-end: July;
    scroll-padding-block-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-end: September;
    -moz-scroll-padding-block-end: September;
    -ms-scroll-padding-block-end: September;
    scroll-padding-block-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: November;
    -moz-scroll-padding-block-end: November;
    -ms-scroll-padding-block-end: November;
    scroll-padding-block-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-end: August;
    -moz-scroll-padding-block-end: August;
    -ms-scroll-padding-block-end: August;
    scroll-padding-block-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-block-end: January;
    -moz-scroll-padding-block-end: January;
    -ms-scroll-padding-block-end: January;
    scroll-padding-block-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: December;
    -moz-scroll-padding-block-end: December;
    -ms-scroll-padding-block-end: December;
    scroll-padding-block-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-end: April;
    -moz-scroll-padding-block-end: April;
    -ms-scroll-padding-block-end: April;
    scroll-padding-block-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: May;
    -moz-scroll-padding-block-end: May;
    -ms-scroll-padding-block-end: May;
    scroll-padding-block-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-end: June;
    -moz-scroll-padding-block-end: June;
    -ms-scroll-padding-block-end: June;
    scroll-padding-block-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-block-end: January;
    -moz-scroll-padding-block-end: January;
    -ms-scroll-padding-block-end: January;
    scroll-padding-block-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: December;
    -moz-scroll-padding-block-end: December;
    -ms-scroll-padding-block-end: December;
    scroll-padding-block-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-block-end: April;
    -moz-scroll-padding-block-end: April;
    -ms-scroll-padding-block-end: April;
    scroll-padding-block-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-block-end: May;
    -moz-scroll-padding-block-end: May;
    -ms-scroll-padding-block-end: May;
    scroll-padding-block-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-block-end: June;
    -moz-scroll-padding-block-end: June;
    -ms-scroll-padding-block-end: June;
    scroll-padding-block-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: 54881px;
  -moz-scroll-padding-block-end: 54881px;
  -ms-scroll-padding-block-end: 54881px;
  scroll-padding-block-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 54881px;
  -moz-scroll-padding-block-end: 54881px;
  -ms-scroll-padding-block-end: 54881px;
  scroll-padding-block-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 42365px;
  -moz-scroll-padding-block-end: 42365px;
  -ms-scroll-padding-block-end: 42365px;
  scroll-padding-block-end: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: 42365px;
  -moz-scroll-padding-block-end: 42365px;
  -ms-scroll-padding-block-end: 42365px;
  scroll-padding-block-end: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: July;
  -moz-scroll-padding-block-end: July;
  -ms-scroll-padding-block-end: July;
  scroll-padding-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: July;
  -moz-scroll-padding-block-end: July;
  -ms-scroll-padding-block-end: July;
  scroll-padding-block-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: June;
  -moz-scroll-padding-block-end: June;
  -ms-scroll-padding-block-end: June;
  scroll-padding-block-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: June;
  -moz-scroll-padding-block-end: June;
  -ms-scroll-padding-block-end: June;
  scroll-padding-block-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingBlockEnd renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-block-end: DarkSlateBlue;
  -moz-scroll-padding-block-end: DarkSlateBlue;
  -ms-scroll-padding-block-end: DarkSlateBlue;
  scroll-padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: DarkSlateBlue;
  -moz-scroll-padding-block-end: DarkSlateBlue;
  -ms-scroll-padding-block-end: DarkSlateBlue;
  scroll-padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: DarkSlateBlue;
  -moz-scroll-padding-block-end: DarkSlateBlue;
  -ms-scroll-padding-block-end: DarkSlateBlue;
  scroll-padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-block-end: DarkSlateBlue;
  -moz-scroll-padding-block-end: DarkSlateBlue;
  -ms-scroll-padding-block-end: DarkSlateBlue;
  scroll-padding-block-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
